Moved the DB configuration to the Dev app settings.

--- a/ContactsApp/appsettings.Development.json
+++ b/ContactsApp/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Database": {
+    "FilePath": "d:\\Projects\\Test\\Rethink\\db.json"
   }
 }
