--- a/ContactsApp/appsettings.json
+++ b/ContactsApp/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Database": {
-    "FilePath": "d:\\Projects\\Test\\Rethink\\db.json"
-  }
+  "AllowedHosts": "*"
 }
